--- a/style.css
+++ b/style.css
@@ -1,2 +1,22 @@
-@import url('./fonts/inter.css');
+@import url(./fonts/inter.css);
+@import url(./vendor/normalize.css);
 
+@import url(./blocks/page/page.css);
+@import url(./blocks/container/container.css);
+
+/* Header */
+@import url(./blocks/header/header.css);
+@import url(./blocks/header/__lang-link/header__lang-link.css);
+
+/* Путешествия по России */
+@import url(./blocks/lead/lead.css);
+@import url(./blocks/lead/__title/lead__title.css);
+@import url(./blocks/lead/__subtitle/lead__subtitle.css);
+@import url(./blocks/lead/__image/lead__image.css);
+@import url(./blocks/lead/__caption/lead__caption.css);
+
+/* Footer */
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__links/footer__links.css);
+@import url(./blocks/footer/__link/footer__link.css);
+@import url(./blocks/footer/__copyright/footer__copyright.css);
