--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,5 +2,15 @@
   text-decoration: none;
   color: white;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.17;
+  font-weight: 400;
+  margin-left: 18px;
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.11;
+  }
 }
