--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,13 @@
 .header {
     height: 52px;
+    margin: 28px auto 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    height: 42px;
+  }
 }
