--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 
 /* Header */
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__lang-selection/header__lang-selection.css);
 @import url(./blocks/header/__lang-link/header__lang-link.css);
+@import url(./blocks/header/__lang-link/_active/header__lang-link_active.css);
 
 /* Путешествия по России */
 @import url(./blocks/lead/lead.css);
