Хэдэр, лид и футер готовы

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,3 +6,19 @@
   line-height: 1.06;
   text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+  .cover__title {
+    font-size: 52px;
+    line-height: 1.09;
+    margin-bottom: 24px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin-bottom: 16px;
+  }
+}
