--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,20 @@
 .header {
+    width: 92%;
+    max-width: 1184px;
     height: 52px;
-    margin: 28px auto 0;
+    margin: 28px auto 56px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1070px) {
+  .header {
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 750px) {
   .header {
     height: 42px;
   }
