--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,18 @@
 .lead__title {
   max-width: 720px;
   font-size: 96px;
-  line-height: 100px;
+  line-height: 1.04;
   font-weight: 900;
   margin: 0 auto 32px;
   text-align: center;
+}
+
+@media screen and (max-width: 750px) {
+  .lead__title {
+    max-width: 288px;
+    margin-bottom: 16px;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 1.10;
+  }
 }
