--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,23 @@
 .lead {
   max-width: 984px;
-  margin: 0 auto;
-  border: 1px solid red;
+  margin: 0 auto 92px;
+}
+
+@media screen and (max-width: 1070px) {
+  .lead {
+    max-width: 92%;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .lead {
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .lead {
+    margin-bottom:64px;
+    max-width: 100%;
+  }
 }
