--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,9 +1,13 @@
 .cover__overlay {
-  background-color: red;
+  position: relative;
+}
+
+.cover__overlay::before {
+  content: "";
+  background: #2A2C2F;
+  opacity: .3;
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
 }
