--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,5 +5,19 @@
   line-height: 1.22;
   text-align: center;
   max-width: 360px;
+}
 
+@media screen and (max-width: 600px) {
+  .cover__subtitle {
+    font-size: 16px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.14;
+    max-width: 288px;
+  }
 }
