--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,13 @@
 .footer {
+  width: 92%;
+  max-width: 1184px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto 24px;
 }
 
-@media screen and (max-width: 715px) {
+@media screen and (max-width: 725px) {
   .footer {
     flex-direction: column;
     align-items: flex-start;
