--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,15 @@
 .lead__caption {
   text-transform: uppercase;
-  margin: 0;
-  max-width: 200px;
+  margin: 0 auto;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-align: left;
+}
+
+@media screen and (max-width: 750px) {
+  .lead__caption {
+    max-width: 92%;
+  }
 }
