--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,20 @@
   margin: 0 auto 64px;
   text-align: center;
 }
+
+@media screen and (max-width: 1070px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .lead__subtitle {
+    max-width: 288px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.25;
+    margin-bottom: 40px;
+  }
+}
+
