--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 @import url(./vendor/normalize.css);
 
 @import url(./blocks/page/page.css);
-@import url(./blocks/container/container.css);
 
 /* Header */
 @import url(./blocks/header/header.css);
@@ -18,16 +17,34 @@
 @import url(./blocks/lead/__image/lead__image.css);
 @import url(./blocks/lead/__caption/lead__caption.css);
 
-
+/* Чего мы там не видели */
+@import url(./blocks/intro/intro.css);
+@import url(./blocks/intro/__title/intro__title.css);
+@import url(./blocks/intro/__text/intro__text.css);
+@import url(./blocks/intro/__list/intro__list.css);
+@import url(./blocks/intro/__list-item/intro__list-item.css);
 
 /* Фото-гриды */
 @import url(./blocks/photo-grid/photo-grid.css);
 @import url(./blocks/photo-grid/__item/photo-grid__item.css);
 
+/* Блок Places */
+@import url(./blocks/places/places.css);
+@import url(./blocks/place/place.css);
+@import url(./blocks/place/__title/place__title.css);
+@import url(./blocks/place/__image/place__image.css);
+@import url(./blocks/place/__website/place__website.css);
+@import url(./blocks/place/__url-heading/place__url-heading.css);
+@import url(./blocks/place/__link/place__link.css);
+@import url(./blocks/place/__text/place__text.css);
+@import url(./blocks/place/__paragraph/place__paragraph.css);
+
 
 /* До Байкала "на собаках" */
 @import url(./blocks/cover/cover.css);
+@import url(./blocks/cover/__overlay/cover__overlay.css);
 @import url(./blocks/cover/__background/cover__background.css);
+@import url(./blocks/cover/__text/cover__text.css);
 @import url(./blocks/cover/__title/cover__title.css);
 @import url(./blocks/cover/__subtitle/cover__subtitle.css);
 
