--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,6 @@
 .cover__overlay {
-  position: relative;
-}
-
-.cover__overlay::before {
-  content: "";
-  background: #2A2C2F;
-  opacity: .3;
   position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
