--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,16 +1,17 @@
 .photo-grid {
+  width: 92%;
+  max-width: 1184px;
+  margin: 0 auto 92px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
-  margin-bottom: 92px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1070px) {
   .photo-grid {
     grid-template-columns: repeat(3, 1fr);
     gap: 14px;
-  }
-  
+  }  
 }
 
 @media screen and (max-width: 820px) {
@@ -28,10 +29,3 @@
     margin-bottom: 64px;
   }
 }
-
-/*
-1280
-1024
-768
-320
-*/
