--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,12 @@
 .place__paragraph {
-  margin: 0 0 ;
+  margin: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.63;
+}
 
+@media screen and (max-width: 820px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
 }
