--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,3 +4,16 @@
   font-weight: 900;
   line-height: 1.06;
 }
+
+@media screen and (max-width: 820px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .place__title {
+    font-size: 32px;
+  }
+}
