--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,28 @@
 .place {
   display: grid;
-  grid-template-columns: repeat(2, 50%);
-  align-items: end;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: start;
   gap: 48px 40px;
   margin-bottom: 80px;
+}
+
+@media screen and (max-width: 1070px) {
+  .place {
+    column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .place {
+    column-gap: 28px;
+    margin-bottom: 73px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .place {
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    row-gap: 32px;
+  }
 }
