Исправил отступы в блоке Places

--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -2,3 +2,10 @@
   display: grid;
   row-gap: 26px;
 }
+
+@media screen and (max-width: 650px) {
+  .place__text {
+    width: 92%;
+    margin: 0 auto;
+  }
+}
