--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,29 +3,6 @@
   max-width: 1184px;
   margin: 0 auto 92px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
-}
-
-@media screen and (max-width: 1070px) {
-  .photo-grid {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 14px;
-  }  
-}
-
-@media screen and (max-width: 820px) {
-  .photo-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 16px;
-    margin-bottom: 88px;
-  }
-}
-
-@media screen and (max-width: 470px) {
-  .photo-grid {
-    grid-template-columns: 1fr;
-    gap: 12px;
-    margin-bottom: 64px;
-  }
 }
