--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,9 @@
 .place {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  align-items: start;
+  grid-template-areas: 
+  "title website"
+  "image article";
   gap: 48px 40px;
   margin-bottom: 80px;
 }
@@ -22,6 +24,11 @@
 @media screen and (max-width: 650px) {
   .place {
     margin-bottom: 50px;
+    grid-template-areas: 
+    "title"
+    "website"
+    "image"
+    "article";
     grid-template-columns: 1fr;
     row-gap: 32px;
   }
