--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,12 @@
 .header__logo {
-  height: 100%;
+  width: 176px;
+  height: 52px;
   object-fit: contain;
+}
+
+@media screen and (max-width: 568px) {
+  .header__logo {
+    width: 142px;
+    height: 42px;
+  }
 }
