--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,8 +8,14 @@
   text-align: left;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 984px) {
   .lead__caption {
-    max-width: 92%;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .lead__caption {
+    margin-left: 16px;
   }
 }
