--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,17 @@
   background-color: #2A2C2F;
   color: #FFF;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
+  min-width: 320px;
+  max-width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 28px 0 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 568px) {
+  .page {
+    padding-top: 16px;
+  }
 }
