--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,8 +1,23 @@
 .photo-grid {
-  width: 92%;
-  max-width: 1184px;
-  margin: 0 auto 92px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
+}
+
+@media screen and (max-width: 1140px) {
+  .photo-grid__position {
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 984px) {
+  .photo-grid__position {
+    gap: 16px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .photo-grid__position {
+    gap: 12px;
+  }
 }
