--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,29 +1,31 @@
 .place {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 460px 484px;
+  grid-template-rows: 1fr 460px;
   grid-template-areas: 
   "title website"
   "image article";
   gap: 48px 40px;
-  margin-bottom: 80px;
 }
 
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 1140px) {
   .place {
+    grid-template-columns: 440px 456px;
+    grid-template-rows: 1fr 440px;
     column-gap: 32px;
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 984px) {
   .place {
+    grid-template-columns: 340px 352px;
+    grid-template-rows: auto;
     column-gap: 28px;
-    margin-bottom: 73px;
   }
 }
 
 @media screen and (max-width: 650px) {
   .place {
-    margin-bottom: 50px;
     grid-template-areas: 
     "title"
     "website"
