--- a/style.css
+++ b/style.css
@@ -5,13 +5,18 @@
 
 /* Header */
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__position/header__position.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/header/__lang-selection/header__lang-selection.css);
 @import url(./blocks/header/__lang-link/header__lang-link.css);
 @import url(./blocks/header/__lang-link/_active/header__lang-link_active.css);
 
+@import url(./blocks/content/content.css);
+@import url(./blocks/page/__content/page__content.css);
+
 /* Путешествия по России */
 @import url(./blocks/lead/lead.css);
+@import url(./blocks/lead/__position/lead__position.css);
 @import url(./blocks/lead/__title/lead__title.css);
 @import url(./blocks/lead/__subtitle/lead__subtitle.css);
 @import url(./blocks/lead/__image/lead__image.css);
@@ -19,6 +24,7 @@
 
 /* Чего мы там не видели */
 @import url(./blocks/intro/intro.css);
+@import url(./blocks/intro/__position/intro__position.css);
 @import url(./blocks/intro/__title/intro__title.css);
 @import url(./blocks/intro/__text/intro__text.css);
 @import url(./blocks/intro/__list/intro__list.css);
@@ -26,10 +32,12 @@
 
 /* Фото-гриды */
 @import url(./blocks/photo-grid/photo-grid.css);
+@import url(./blocks/photo-grid/__position/photo-grid__position.css);
 @import url(./blocks/photo-grid/__item/photo-grid__item.css);
 
 /* Блок Places */
 @import url(./blocks/places/places.css);
+@import url(./blocks/places/__position/places__position.css);
 @import url(./blocks/place/place.css);
 @import url(./blocks/place/__title/place__title.css);
 @import url(./blocks/place/__image/place__image.css);
@@ -42,15 +50,15 @@
 
 /* До Байкала "на собаках" */
 @import url(./blocks/cover/cover.css);
+@import url(./blocks/cover/__position/cover__position.css);
 @import url(./blocks/cover/__link/cover__link.css);
-@import url(./blocks/cover/__background/cover__background.css);
-@import url(./blocks/cover/__overlay/cover__overlay.css);
 @import url(./blocks/cover/__title/cover__title.css);
 @import url(./blocks/cover/__subtitle/cover__subtitle.css);
 
 
 /* Footer */
 @import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__position/footer__position.css);
 @import url(./blocks/footer/__links/footer__links.css);
 @import url(./blocks/footer/__link/footer__link.css);
 @import url(./blocks/footer/__copyright/footer__copyright.css);
